pkg/workloads/v4l2rtspserver/overlays/rpi4-0/ingressroute/rtsp0-hls-ir.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rtsp0-hls-ir
  namespace: v4l2rtspserver
spec:
  entryPoints:
    - websecure
  routes:
  # TODO troubelshoot this route to get it working
  # it maybe the rtsp server itself rather than traefik
  - match: Host(`rtsp0-hls.app.rick.expresso.lan`)
    kind: Rule
    priority: 30
    services:
    - kind: Service
      name: rtsp0-hls-svc
      namespace: v4l2rtspserver
      passHostHeader: true
      port: rtsp-hls-web
      responseForwarding:
        flushInterval: 1ms
      scheme: http
      sticky:
        cookie:
          httpOnly: true
          name: cookie
          secure: true
          sameSite: none
          maxAge: 42  
      weight: 40
      nativeLB: true
  tls: {}
